refactor: change endpoint name and add clevel supervisor feedback
