# storage/api-docs/api-docs.json
@@ -108,13 +108,13 @@
                 }
             }
         },
-        "/api/v1/kpi/division/{year}/{month}": {
+        "/api/v1/kpi/supervisor-division/{year}/{month}": {
             "get": {
                 "tags": [
                     "KPI"
                 ],
                 "summary": "Supervisor melihat KPI Divisi pada bulan yang dipilih",
-                "operationId": "b7b2fbea4e893cdcf559dd97117d9b36",
+                "operationId": "5162d5ce3cd5d9e08531733c259a6ccf",
                 "parameters": [
                     {
                         "name": "year",
@@ -231,7 +231,7 @@
                 ],
                 "summary": "Supervisor mengisi KPI Divisi",
                 "description": "Supervisor mengisi KPI dari divisinya per bulan dan akan dikirimkan ke C-Level untuk dinilai",
-                "operationId": "c2a40892f01d7a00dd67896263759a86",
+                "operationId": "398a234f679bb8542d3f318694b4cfb3",
                 "parameters": [
                     {
                         "name": "year",
@@ -420,7 +420,7 @@
                 "tags": [
                     "KPI"
                 ],
-                "summary": "Menampilkan KPI divisi beserta realisasi akhir bulan",
+                "summary": "Clevel Menampilkan score KPI divisi beserta realisasi akhir bulan",
                 "description": "C-Level melihat KPI dari divisinya pada tahun dan bulan tertentu beserta realisasi akhir bulannya.",
                 "operationId": "086d9f360204cce63f7f0adfba339ab5",
                 "parameters": [
@@ -547,8 +547,8 @@
                 "tags": [
                     "KPI"
                 ],
-                "summary": "Memperbarui realisasi akhir bulan untuk KPI divisi",
-                "description": "C-Level memperbarui realisasi akhir bulan dari KPI yang ada untuk divisinya pada tahun dan bulan tertentu.",
+                "summary": "C-Level menilai KPI Divisi",
+                "description": "C-Level menilai KPI divisi menggunakan realisasi akhir bulan divisinya pada tahun dan bulan tertentu.",
                 "operationId": "02e92fad30def01df4089c0f77cacf4e",
                 "parameters": [
                     {
@@ -774,13 +774,13 @@
                 ]
             }
         },
-        "/api/v1/feedback/clevel-supervisor/staff/{id}/{year}/{month}": {
+        "/api/v1/feedback/supervisor-staff/{id}/{year}/{month}": {
             "get": {
                 "tags": [
                     "Feedback"
                 ],
                 "summary": "Supervisor melihat monthly feedback seorang staff",
-                "operationId": "4631de1d228c68e895a1d2a8b9c51000",
+                "operationId": "072af7ef5ea7b2273a197516821aad71",
                 "parameters": [
                     {
                         "name": "id",
@@ -887,7 +887,7 @@
                     "Feedback"
                 ],
                 "summary": "Supervisor membuat monthly feedback ke seorang staff",
-                "operationId": "8d3776869997287c17381eb078f59f19",
+                "operationId": "ea83b1a1c363b186a5f73ca500826810",
                 "parameters": [
                     {
                         "name": "id",
@@ -991,6 +991,262 @@
                                         "message": {
                                             "type": "string",
                                             "example": "Internal server error"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/feedback/clevel-supervisor/{id}/{divisionId}/{year}/{month}": {
+            "get": {
+                "tags": [
+                    "Feedback"
+                ],
+                "summary": "Menampilkan feedback bulanan supervisor untuk staf di divisinya",
+                "operationId": "df9f3db691b24df71ce99315f2c713c7",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID pengguna (staf)",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "divisionId",
+                        "in": "path",
+                        "description": "ID divisi",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "year",
+                        "in": "path",
+                        "description": "Tahun feedback",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "2024"
+                        }
+                    },
+                    {
+                        "name": "month",
+                        "in": "path",
+                        "description": "Bulan feedback",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 8
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Feedback berhasil ditemukan.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "user_id": {
+                                            "type": "integer"
+                                        },
+                                        "division_id": {
+                                            "type": "integer"
+                                        },
+                                        "year": {
+                                            "type": "string",
+                                            "example": "2024"
+                                        },
+                                        "month": {
+                                            "type": "integer",
+                                            "example": 8
+                                        },
+                                        "content_text": {
+                                            "type": "string",
+                                            "example": "Kinerja Anda bulan ini sangat baik."
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Feedback tidak ditemukan.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "No feedback found for this period"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Feedback"
+                ],
+                "summary": "Clevel supervisor mengisi feedback bulanan untuk supervisor di divisinya",
+                "operationId": "ba84c6902abb64a36f7d3153225331a0",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID pengguna (staf)",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "divisionId",
+                        "in": "path",
+                        "description": "ID divisi",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "year",
+                        "in": "path",
+                        "description": "Tahun feedback",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "2024"
+                        }
+                    },
+                    {
+                        "name": "month",
+                        "in": "path",
+                        "description": "Bulan feedback",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 8
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "content_text": {
+                                        "type": "string",
+                                        "example": "Kinerja Anda bulan ini sangat baik."
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Feedback berhasil dibuat.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "user_id": {
+                                            "type": "integer"
+                                        },
+                                        "division_id": {
+                                            "type": "integer"
+                                        },
+                                        "year": {
+                                            "type": "string",
+                                            "example": "2024"
+                                        },
+                                        "month": {
+                                            "type": "integer",
+                                            "example": 8
+                                        },
+                                        "content_text": {
+                                            "type": "string",
+                                            "example": "Kinerja Anda bulan ini sangat baik."
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Feedback untuk bulan ini sudah ada.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Feedback for this month already exists"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Data yang diberikan tidak valid.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The content_text field is required."
                                         }
                                     },
                                     "type": "object"
@@ -1152,14 +1408,14 @@
                 ]
             }
         },
-        "/api/v1/kpi/supervisor/{id}/{month}": {
+        "/api/v1/kpi/supervisor-staff/{id}/{month}/score": {
             "get": {
                 "tags": [
                     "KPI"
                 ],
                 "summary": "Supervisor melihat KPI seorang staff",
                 "description": "Supervisor melihat KPI Rating seorang staff pada bulan yang ditentukan",
-                "operationId": "3cdc68ee83eea0dd81d17e0b56c1ea58",
+                "operationId": "71e4d29534aab80e1b34ba3bd1430e74",
                 "parameters": [
                     {
                         "name": "id",
@@ -1325,7 +1581,7 @@
                 ],
                 "summary": "Supervisor menilai KPI seorang staff",
                 "description": "Supervisor menilai KPI Rating seorang staff pada bulan yang ditentukan",
-                "operationId": "c64c81630965c19ac52da82fade83f5c",
+                "operationId": "4c5cb214adc9a5db79a8453ef3625efb",
                 "parameters": [
                     {
                         "name": "id",
@@ -2273,7 +2529,7 @@
                     "User"
                 ],
                 "summary": "Melihat siapa saja staff dari supervisor",
-                "description": "Menampilkan list siapa saja staff-staff dari seorang supervisor",
+                "description": "Menampilkan list siapa saja staff-staff dari seorang supervisor atau vice supervisor",
                 "operationId": "28a5d75252333aa9c16ebe4a44759ace",
                 "responses": {
                     "200": {
